# awesome-cursor-rules-mdc

./: GUIDE.md  README.md  custom-rules.json  install.sh  install_aliases.json  pyproject.toml  repo.json  rules.json  stacks.json
docs/: README.md  catalog.json  guide.html  index.html  styles.css
rules-custom/: acid-properties.mdc  ai-design-patterns.mdc  authentication.mdc  authorization.mdc  backend.mdc  base.mdc  caching.mdc  cap-theorem.mdc  complex.mdc  concurrency-parallelism.mdc  design-patterns.mdc  distributed-locks.mdc  distributed-rate-limiting.mdc  env-secrets-management.mdc  frontend.mdc  gen-ai-development.mdc  graph-rag.mdc  multi-agent-systems.mdc  rag-development.mdc  rate-limiting.mdc  simple.mdc  software-architecture.mdc  token-optimization.mdc  vectorless-rag.mdc
rules-mdc/: anthropic.mdc  apache-airflow.mdc  apache-beam.mdc  apache-flink.mdc  apache-iceberg.mdc  apache-kafka.mdc  apache-nifi.mdc  apache-pulsar.mdc  apache-spark.mdc  aws-emr.mdc  aws-glue.mdc  aws-kinesis.mdc  aws-secrets-manager.mdc  aws-sns.mdc  aws-sqs.mdc  azure-data-factory.mdc  azure-key-vault.mdc  azure-service-bus.mdc  bootstrap.mdc  cassandra.mdc  chromadb.mdc  clickhouse.mdc  dagster.mdc  dbt.mdc  delta-lake.mdc  framer-motion.mdc  google-bigquery.mdc  google-cloud-run.mdc  google-dataflow.mdc  google-pubsub.mdc  google-secret-manager.mdc  graph-database.mdc  great-expectations.mdc  haystack.mdc  ios-development.mdc  javascript.mdc  kotlin.mdc  langsmith.mdc  lit.mdc  memcached.mdc  (+15 more)
src/: config.yaml  generate_catalog.py  generate_template_mdc.py  install_rules.py  (+5 more)
(+1 files in other folders)
