[project]
name = "mdc-rules-generator"
version = "0.1.0"
description = "Generate Cursor MDC rule files from a structured JSON file"
authors = [
    {name = "Sanjeed", email = "hi@sanjeed.in"},
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "tenacity>=8.2.3",
    "ratelimit>=2.2.1",
    "pydantic>=2.0.0",
    "exa-py>=1.0.0",
    "pyyaml>=6.0.0",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
cursor-rules = "src.install_rules:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
